# Embedding-soft-learning

./: .gitignore  README.md
docs/: advanced_makefile_reading_guide.md  basic_makefile_guide.md  container_of.md  makefile_functions_guide.md  makefile_variables_guide.md
docs/Data_Structure/: Sequential_list.md  binary_search_tree_comprehensive.md  binary_tree_comprehensive.md  doubly_circular_linked_list.md  queue_comprehensive.md  red_black_tree_comprehensive.md  stack_comprehensive.md  内核链表.md
docs/MySQL-learning/: 1.Mysql数据库编程.md  2.MySql接口函数.md  3.Mysql可视化操作.md
docs/c_language_advanced/: compound_data_types.md  concurrency_and_multithreading.md  function_pointers_and_callbacks.md  memory_layout.md  modular_design_and_headers.md  one_dimensional_array.md  pointer_deep_dive.md  pointers_and_memory.md  preprocessor_advanced.md  struct_deep_dive.md  two_dimensional_array.md
docs/c_language_basics/: base_conversion.md  c_compilation_pipeline.md  c_data_structures.md  inline_functions.md  libc_string_functions.md  memory_management.md  operators.md  standard_io.md  variadic_functions.md
docs/cpp_language_learning/: cpp编程开发.md  学习问答记录.md
docs/cpp_language_learning/STL编程/: algorithm.md  function_adapter.md  functors.md  memory_allocator.md  unordered_map_and_ordered_set.md
docs/cpp_language_learning/内存操作/: memory_management.md
docs/cpp_language_learning/多线程编程/: lock_quard.md  package_task.md  unique_lock.md  三种异步工具的区别.md  什么是多线程.md  信号量.md  创建多线程.md  原子变量和原子操作.md  异步编程future和async.md  异步编程promise.md  条件变量.md  栅栏.md  死锁.md  线程同步和mutex.md  线程池.md  线程间同步方式.md  读写锁.md
docs/cpp_language_learning/文件流操作/: files_stream_operations.md
docs/cpp_language_learning/模板/: class_template.md  function_template.md
docs/linux_basics/: build_and_debug_tools.md  networking_tools.md  permissions_and_security.md  process_management.md  shell_and_filesystem.md
docs/network_programming/: http通信协议开发.md  广播通信.md  网络编程.md  网络编程_01_基础.md  网络编程_02_调试工具.md  网络编程_03_TCP通信.md  网络编程_04_并发服务器.md  网络编程_05_UDP通信.md
docs/qt5-learning/: PyQt6_learning.md  QSqlite_development.md  Qt5_framework_development.md  Qt6_learning.md  Qt_ROS2_visualization.md
pdf/算法/: 几个算法学习网站.txt
src/Data_Structure/: Makefile  main.c  test_doubly_linked_list.c  test_linked_list.c  test_list_queue.c  test_sequential_list.c
src/Data_Structure/Sequential_List/: Sequential_List.c
src/Data_Structure/include/: Data_Base.h  list.h  (+6 more)
src/IO_programming/: Makefile
src/MySQL_server/: Makefile  PRACTICE_GUIDE.md  demo_01_connect_template.c  demo_02_schema_seed_template  demo_02_schema_seed_template.c  demo_03_crud_menu_template.c  server.c  setup_mysql.sh  test_demo_02_schema_seed.c  test_demo_03_crud_menu.c
src/Student_Info_Manament_System/: Makefile  main.c  migrate_data.c  开发文档.md  数据迁移说明.md
src/c_language_advanced/: Makefile
src/cpp_language_learning/: Application_of_Smart_Pointers.cpp  Producer-Consumer_model.cpp  RAII_lock_wrapper.cpp  Templates_and_Type_Inference.cpp  Thread_safe_counter.cpp
src/dstruct_demo/: Makefile  dStruct.c  dStruct.h  main.c
src/epoll_concurrent_server/: client.c  server.c  server_v2  server_v2.c  test_epoll.sh
src/http_server/: README.md  server  server.c  test_http.sh
src/network-programming/: CMakeLists.txt  README.md  test.sh
src/network-programming/src/: client_demo.c  server_demo.c
src/qt_learning/QSqlited_demo/: CMakeLists.txt  DatabaseService.cpp  DatabaseService.h  StudentModel.cpp  StudentModel.h  main.cpp
src/qt_learning/QSqlited_demo/qml/: Main.qml
src/qt_learning/qt6widget_ui_demo/: CMakeLists.txt  DatabaseService.cpp  DatabaseService.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
src/qt_learning/qt_quick3d_demo/: CMakeLists.txt  README.md  install_quick3d_deps.sh  main.cpp
src/qt_learning/qt_quick3d_demo/qml/: Main.qml  MainFallback.qml  MainQuick3D.qml
src/qt_learning/qt_ros2_demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  RosBridge.cpp  RosBridge.h  main.cpp
src/select_concurrent_server/: client  client.c  server  server.c
src/udp_broadcast/: client  client.c  server  server.c
src/udp_server/: client  client.c  server  server.c
(+123 files in other folders)
